test/functions/deitz/test_var_function_returns_local_via_var_function.chpl
proc foo() ref {
  var x: (int, int);
  return x(1);
}

foo() = 2;
writeln(foo());
